--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Imports:
   dnar (>= 0.1),
   dplyr (>= 0.7.4),
   magrittr (>= 1.5),
+  msa (>= 1.2.1),
   parallel (>= 3.2.3),
   pheatmap (>= 1.0.8),
   stringr (>= 1.2.0)
