new io functions for alignments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(make.dist_mat)
 export(make.dist_mat_known)
 export(prepare.dataset)
 export(report.genotypes)
+export(save.alignment_images)
+export(save.alignments)
 export(summarize.dataset)
 export(summarize.sample)
 importFrom(magrittr,"%>%")
