--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(align.alleles)
 export(analyze.dataset)
 export(analyze.sample)
 export(calc.genotype.distance)
+export(config.defaults)
+export(full_analysis)
 export(histogram)
 export(load.locus_attrs)
 export(load.seqs)
