--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(full_analysis)
 export(histogram)
 export(load.locus_attrs)
 export(load.seqs)
+export(main)
 export(make.dist_mat)
 export(make.dist_mat_known)
 export(prepare.dataset)
