--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,9 @@ export(prepare.dataset)
 export(report.genotypes)
 export(save.alignment_images)
 export(save.alignments)
+export(save.allele_seqs)
+export(save.results_summary)
+export(save.sample_data)
 export(summarize.dataset)
 export(summarize.sample)
 importFrom(magrittr,"%>%")
