--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(report.genotypes)
 export(save.alignment_images)
 export(save.alignments)
 export(save.allele_seqs)
+export(save.dist_mat)
 export(save.results_summary)
 export(save.sample_data)
 export(summarize.dataset)
