--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
   openssl (>= 0.9.6),
   parallel (>= 3.2.3),
   pheatmap (>= 1.0.8),
+  rmarkdown (>= 1.6),
   stringr (>= 1.2.0),
   yaml (>= 2.1.14)
 RoxygenNote: 6.0.1
