export updated functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(calc_genotype_distance)
 export(config.defaults)
 export(full_analysis)
 export(histogram)
+export(histogram2)
 export(load_config)
 export(load_locus_attrs)
 export(load_seqs)
@@ -24,6 +25,7 @@ export(save_alignment_images)
 export(save_alignments)
 export(save_allele_seqs)
 export(save_dist_mat)
+export(save_histograms)
 export(save_results_summary)
 export(save_sample_data)
 export(summarize_dataset)
