--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(full_analysis)
 export(histogram)
 export(histogram2)
 export(load_config)
+export(load_genotypes)
 export(load_locus_attrs)
 export(load_seqs)
 export(main)
