support for individual identification

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(analyze_dataset)
 export(analyze_sample)
 export(calc_genotype_distance)
 export(config.defaults)
+export(find_closest_matches)
 export(full_analysis)
 export(histogram)
 export(histogram2)
