multiple reporting/output fixes
add consistent sorting of locus names across tables and plots, move
counts-per-locus code to report.R, add summarize_sample_naive

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
   stats (>= 3.2.3),
   stringr (>= 1.2.0),
   utils (>= 3.2.3),
+  viridis (>= 0.4.0),
   yaml (>= 2.1.14)
 Remotes:
   github::sherrillmix/dnar,
