add full support for allele names table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(find_closest_matches)
 export(full_analysis)
 export(histogram)
 export(histogram2)
+export(load_allele_names)
 export(load_config)
 export(load_genotypes)
 export(load_locus_attrs)
