update function exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ export(load_seqs)
 export(main)
 export(make_dist_mat)
 export(make_dist_mat_known)
+export(plot_alignment)
+export(plot_dist_mat)
 export(plot_heatmap)
 export(plot_heatmap_homozygous)
 export(plot_heatmap_prominent_seqs)
@@ -31,6 +33,10 @@ export(save_dist_mat)
 export(save_histograms)
 export(save_results_summary)
 export(save_sample_data)
+export(summarize_attribute)
 export(summarize_dataset)
+export(summarize_genotypes)
+export(summarize_genotypes_known)
 export(summarize_sample)
+export(tally_cts_per_locus)
 importFrom(magrittr,"%>%")
