use full arguments for report_idents

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(plot_heatmap_proportions)
 export(plot_heatmap_stutter)
 export(prepare_dataset)
 export(report_genotypes)
+export(report_idents)
 export(save_alignment_images)
 export(save_alignments)
 export(save_allele_seqs)
