update example config file for new layout

--- a/inst/example_config.yml
+++ b/inst/example_config.yml
@@ -1,6 +1,8 @@
 ---
  
-dp.data: '~/data/str-dataset'
-pattern: 'Replicate(\d+)-Sample(\d+)-([A-Za-z0-9]+)_.*\.fastq$'
-dp.output: 'str-results'
+datset_opts:
+  dp: '~/data/str-dataset'
+  pattern: 'Replicate(\d+)-Sample(\d+)-([A-Za-z0-9]+)_.*\.fastq$'
+output:
+  dp: 'str-results'
 fp.locus_attrs: '~/analysis/locus_attrs.tsv'
