--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,5 +39,6 @@ export(summarize_dataset)
 export(summarize_genotypes)
 export(summarize_genotypes_known)
 export(summarize_sample)
+export(summarize_sample_guided)
 export(tally_cts_per_locus)
 importFrom(magrittr,"%>%")
