add demo script to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,9 @@ r:
   - devel
   - bioc-devel
 cache: packages
+install:
+  - R -e "devtools::install_deps(dep = T)"
+script:
+  - R CMD build .
+  - R CMD check *tar.gz
+  - ./inst/bin/demo.sh
