split cts_per_locus heatmap from markdown code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(main)
 export(make_dist_mat)
 export(make_dist_mat_known)
 export(plot_alignment)
+export(plot_cts_per_locus)
 export(plot_dist_mat)
 export(plot_heatmap)
 export(plot_heatmap_homozygous)
