simplify example config

--- a/inst/example_config.yml
+++ b/inst/example_config.yml
@@ -11,15 +11,15 @@
 #   An example file name matching this pattern:
 #     "Replicate1-Sample30-A.fastq.gz"
 dataset_opts:
-  dp: 'str-dataset'
-  pattern: 'Replicate(\d+)-Sample(\d+)-([A-Za-z0-9]+)'
+  dp: str-dataset
+  pattern: Replicate(\d+)-Sample(\d+)-([A-Za-z0-9]+)
 # "output" defines options related to analysis output.
 #   "dp" defines the directory that will contain all output files.
 output:
-  dp: 'str-results'
+  dp: str-results
 # This is the location of the spreadsheet defining locus attributes (lengths,
 # primers, etc.)  See example_locus_attrs.csv for an example.
-fp_locus_attrs: 'locus_attrs.csv'
+fp_locus_attrs: locus_attrs.csv
 
 # There are many more options available than are shown here.  For the full list
 # and all default values, see R/microsat.R.  This file format is YAML
