update tests and manual for load_dataset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(histogram)
 export(histogram2)
 export(load_allele_names)
 export(load_config)
+export(load_dataset)
 export(load_genotypes)
 export(load_locus_attrs)
 export(load_seqs)
