update summary and report code for artifacts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(plot_alignment)
 export(plot_cts_per_locus)
 export(plot_dist_mat)
 export(plot_heatmap)
+export(plot_heatmap_artifacts)
 export(plot_heatmap_homozygous)
 export(plot_heatmap_prominent_seqs)
 export(plot_heatmap_proportions)
