--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: microsat
-Title: Analyze Microsatellites in High-Throughput Sequencing Data
+Package: chiimp
+Title: Computational, High-throughput Individual Identification through Microsatellite Profiling
 Version: 0.0.0.9000
 Authors@R: person("Jesse", "Connell", email = "ancon@upenn.edu", role = c("aut", "cre"))
 Description: An R package to analyze microsatellites in high-throughput sequencing datasets.
