--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
   kableExtra (>= 0.2.1.9000),
   knitr (>= 1.16),
   magrittr (>= 1.5),
+  methods (>= 3.2.3),
   msa (>= 1.2.1),
   openssl (>= 0.9.6),
   parallel (>= 3.2.3),
