update namespace for new allele table function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,6 @@ export(plot_heatmap_prominent_seqs)
 export(plot_heatmap_proportions)
 export(plot_heatmap_stutter)
 export(prepare_dataset)
-export(report_genotypes)
 export(report_idents)
 export(save_alignment_images)
 export(save_alignments)
@@ -43,5 +42,6 @@ export(summarize_genotypes)
 export(summarize_genotypes_known)
 export(summarize_sample)
 export(summarize_sample_guided)
+export(tabulate_allele_names)
 export(tally_cts_per_locus)
 importFrom(magrittr,"%>%")
