Add save_dataset, prep_dataset multiplex handling
Add a complementary function to load_dataset (save_dataset).  Also add
functionality to prepare_dataset to allow the automatic mapping of
individual files to multiple sequencer samples for multiplexed cases.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(report_idents)
 export(save_alignment_images)
 export(save_alignments)
 export(save_allele_seqs)
+export(save_dataset)
 export(save_dist_mat)
 export(save_histograms)
 export(save_results_summary)
