--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ r:
   - devel
   - bioc-devel
 cache: packages
+install:
+  - R -e "devtools::install_deps(dep = T)"
 script:
   - R CMD build .
   - R CMD check *tar.gz
