restructure allele naming to occur during analysis
Now all features of naming alleles occur during analyze_dataset,
including the hash length setting.  Reporting now just tabulates
existing names into the wide format.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(plot_heatmap_prominent_seqs)
 export(plot_heatmap_proportions)
 export(plot_heatmap_stutter)
 export(prepare_dataset)
+export(report_genotypes)
 export(report_idents)
 export(save_alignment_images)
 export(save_alignments)
@@ -38,8 +39,6 @@ export(save_results_summary)
 export(save_sample_data)
 export(summarize_attribute)
 export(summarize_dataset)
-export(summarize_genotypes)
-export(summarize_genotypes_known)
 export(summarize_sample)
 export(summarize_sample_guided)
 export(tabulate_allele_names)
