analyze_dataset: split "data" into files, samples
What was previously a per-sample list of processed sequence data is now
per-file in "files" and per-sample in "samples."  This way files are
only fully processed once even for multiplexed samples, and the samples
list can (in future updates) contain a filtered set of locus-specific
rows.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(save_dist_mat)
 export(save_histograms)
 export(save_results_summary)
 export(save_sample_data)
+export(save_seqfile_data)
 export(summarize_attribute)
 export(summarize_dataset)
 export(summarize_sample)
