--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(align_alleles)
 export(analyze_dataset)
+export(analyze_sample)
+export(analyze_sample_guided)
+export(analyze_sample_naive)
 export(analyze_seqs)
 export(calc_genotype_distance)
 export(config.defaults)
@@ -30,6 +33,8 @@ export(plot_heatmap_stutter)
 export(prepare_dataset)
 export(report_genotypes)
 export(report_idents)
+export(sample_analysis_funcs)
+export(sample_summary_funcs)
 export(save_alignment_images)
 export(save_alignments)
 export(save_allele_seqs)
