For #8: add categorization code and failing tests
This adds match_known_genotypes and categorize_genotype_results and
calls them from within summarize_dataset for the case where
genotypes.known is supplied *and* a Name column is present in the
results summary data frame (e.g. from the original dataset data frame).
A stub failing test for each new function is a placeholder until real
tests are filled in.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(analyze_sample_guided)
 export(analyze_sample_naive)
 export(analyze_seqs)
 export(calc_genotype_distance)
+export(categorize_genotype_results)
 export(config.defaults)
 export(find_closest_matches)
 export(full_analysis)
@@ -20,6 +21,7 @@ export(load_seqs)
 export(main)
 export(make_dist_mat)
 export(make_dist_mat_known)
+export(match_known_genotypes)
 export(plot_alignment)
 export(plot_cts_per_locus)
 export(plot_dist_mat)
