preliminary code using kinship2 package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(load_seqs)
 export(main)
 export(make_dist_mat)
 export(make_dist_mat_known)
+export(match_kin)
 export(match_known_genotypes)
 export(plot_alignment)
 export(plot_cts_per_locus)
