--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -5,6 +5,7 @@ environment.yml
 install_linux_conda.sh
 install_linux.sh
 install_windows.cmd
+install_windows.R
 install_mac.command
 README.md
 GUIDE.Rmd
