move test helper data creation into package proper
To make the same test data currently used for unit tests available for
code examples and more generally to the package, move it into R/ instead
of tests/.  This has some caveats since it produces an object instead of
functions during execution (package build), but should be OK for the
time being.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,3 +51,4 @@ export(summarize_sample)
 export(summarize_sample_guided)
 export(tabulate_allele_names)
 export(tally_cts_per_locus)
+export(test_data)
