add osx to travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+# https://docs.travis-ci.com/user/multi-os/
+os:
+  - linux
+  - osx
 # https://docs.travis-ci.com/user/languages/r
 language: r
 bioc_packages: msa
