exlude devel on osx for travis testing
The devel build URL is out of date for osx.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,12 @@ r:
   - oldrel
   - release
   - devel
+# Mac OS R devel build URL is out of date, currently.
+# https://travis-ci.community/t/672
+matrix:
+  exclude:
+    - r: devel
+      os: osx
 cache: packages
 script:
   - R CMD build .
