move executables from inst/bin/ to exec/
This is more idiomatic for R packages.  Also put AppleScript in tools/
as it is only needed when building the Mac OS wrapper.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ cache: packages
 script:
   - R CMD build .
   - R CMD check *tar.gz
-  - ./inst/bin/demo.sh
-  - ./inst/bin/demo_empty.sh
+  - ./exec/demo.sh
+  - ./exec/demo_empty.sh
   - ./tools/travis_install_test.sh
