--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,7 @@ script:
   - ./exec/demo.sh
   - ./exec/demo_empty.sh
   - ./tools/travis_install_test.sh
+# Don't cache the installed chiimp R package itself.  We want to start without
+# it installed for each test.
+before_cache:
+  - rm -rf $HOME/R/Library/chiimp
