For #39: implement load_csv/save_csv helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(full_analysis)
 export(histogram)
 export(load_allele_names)
 export(load_config)
+export(load_csv)
 export(load_dataset)
 export(load_genotypes)
 export(load_locus_attrs)
@@ -39,6 +40,7 @@ export(sample_summary_funcs)
 export(save_alignment_images)
 export(save_alignments)
 export(save_allele_seqs)
+export(save_csv)
 export(save_dataset)
 export(save_dist_mat)
 export(save_histograms)
