For #42: add support for reverse primers
Add support (off by default to match current behavior) for the
ReversePrimer column in the locus_attrs table when calling analyze_seqs
as an additional restriction on locus-matching.  Either orientation is
supported.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Encoding: UTF-8
 LazyData: true
 Imports:
   argparser (>= 0.4),
+  Biostrings (>= 2.38.4),
   dnaplotr (>= 0.1),
   dnar (>= 0.1),
   devtools (>= 1.13.5),
