--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Depends: R (>= 3.2.3)
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
+Language: en-US
 Imports:
   argparser (>= 0.4),
   Biostrings (>= 2.38.4),
@@ -31,7 +32,7 @@ Imports:
 Remotes:
   github::sherrillmix/dnar,
   github::sherrillmix/dnaplotr
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 Suggests:
   testthat,
   roxygen2
