Try handling bioconductor installs via devtools
I hear devtools can magically install packages from bioconductor.  Let's
try it.
https://bioinformatics.stackexchange.com/a/3375

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 Language: en-US
+biocViews:
 Imports:
   argparser (>= 0.4),
   Biostrings (>= 2.38.4),
