--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,11 @@ r:
   - bioc-devel
 # Mac OS R devel build URL is out of date, currently.
 # https://travis-ci.community/t/672
+# Also seeing trouble with bioc-devel on Mac OS, but community site is timing
+# out so I'm not sure what the deal is with that one.  (2019-11-20)
 matrix:
   exclude:
-    - r: devel
+    - r: [devel, bioc-devel]
       os: osx
 cache: packages
 script:
