circleci: try rocker/tidyverse (vs verse)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,8 @@ version: 2.1
 jobs:
   build:
     docker: 
-      - image: rocker/verse:4.1.2
+      # https://gitlab.irstea.fr/in-wop/airGRiwrm/-/issues/53
+      - image: rocker/tidyverse:4.1.2
     steps:
       - checkout
       - restore_cache:
