--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
           name: Build package
           command: R CMD build .
       - run:
+        name: Try Rd2pdf manually
+        command: R CMD Rd2pdf man
+      - run:
           name: Check package
           command: R CMD check *tar.gz
       - store_artifacts:
