--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,13 @@
 # https://blog.jdblischak.com/posts/circleci-for-r-1/
 # https://blog.jdblischak.com/posts/circleci-for-r-2/
+# https://gitlab.irstea.fr/in-wop/airGRiwrm/-/issues/53
 version: 2.1
 jobs:
   build:
     docker: 
-      # https://gitlab.irstea.fr/in-wop/airGRiwrm/-/issues/53
-      - image: rocker/tidyverse:4.1.2
+      - image: rocker/verse:4.1.2
     steps:
       - checkout
-      - run:
-          name: Install texlive-latex-base for pdflatex
-          command: apt-get install texlive-latex-base
       - restore_cache:
           keys:
             - cache-{{ .Environment.CIRCLE_JOB }}-{{ checksum "DESCRIPTION" }}
