--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 jobs:
   build:
     docker: 
-      - image: rocker/verse:4.1.2
+      - image: rocker/tidyverse:4.1.2
     steps:
       - checkout
       - restore_cache:
@@ -14,6 +14,9 @@ jobs:
       - run:
           name: Install package dependencies
           command: R -e "devtools::install_deps(dep = TRUE)"
+      - run:
+          name: Install tinytex
+          command: R -e 'install.packages("tinytex")'
       - save_cache:
           key: cache-{{ .Environment.CIRCLE_JOB }}-{{ checksum "DESCRIPTION" }}
           paths:
