--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,14 @@
 # https://blog.jdblischak.com/posts/circleci-for-r-1/
 # https://blog.jdblischak.com/posts/circleci-for-r-2/
+#
+# Can't get the full package check working with rocker becuase of latex/pdf
+# issues.  This looks like the problem:
+#
 # https://gitlab.irstea.fr/in-wop/airGRiwrm/-/issues/53
+#
+# ...but if I switch to rocker/tidyverse it's then missing pdflatex, and if I
+# stick with rocker/verse, it still can't find the font.  For now I'm just
+# skipping that part of the package check with --no-manual.
 version: 2.1
 jobs:
   build:
@@ -14,9 +22,6 @@ jobs:
       - run:
           name: Install package dependencies
           command: R -e "devtools::install_deps(dep = TRUE)"
-      - run:
-          name: Install tinytex
-          command: R -e 'install.packages("tinytex")'
       - save_cache:
           key: cache-{{ .Environment.CIRCLE_JOB }}-{{ checksum "DESCRIPTION" }}
           paths:
@@ -26,7 +31,7 @@ jobs:
           command: R CMD build .
       - run:
           name: Check package
-          command: R CMD check *tar.gz
+          command: R CMD check --no-manual *tar.gz
       - store_artifacts:
           name: "Store Artifacts: 00check.log"
           path: chiimp.Rcheck/00check.log
