--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           path: chiimp.Rcheck/00install.out
       - run:
           name: "Run demo script"
-          command: bash exec/demo.sh demo-files
+          command: bash exec/demo.sh $PWD/demo-files
       - store_artifacts:
           name: "Store Artifacts: demo: report"
           path: demo-files/str-results/report.html
@@ -49,7 +49,7 @@ jobs:
           path: demo-files/str-results/summary.csv
       - run:
           name: "Run demo script - empty case"
-          command: bash exec/demo_empty.sh demo-empty-files
+          command: bash exec/demo_empty.sh $PWD/demo-empty-files
       - store_artifacts:
           name: "Store Artifacts: empty demo: report"
           path: demo-empty-files/str-results/report.html
