--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,57 @@
 # skipping that part of the package check with --no-manual.
 version: 2.1
 jobs:
-  build:
+  build-r-4:
     docker:
       - image: rocker/verse:4.1.2
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - cache-{{ .Environment.CIRCLE_JOB }}-{{ checksum "DESCRIPTION" }}
+      - run:
+          name: Install package dependencies
+          command: R -e "devtools::install_deps(dep = TRUE)"
+      - save_cache:
+          key: cache-{{ .Environment.CIRCLE_JOB }}-{{ checksum "DESCRIPTION" }}
+          paths:
+            - "/usr/local/lib/R/site-library"
+      - run:
+          name: Build package
+          command: R CMD build .
+      - run:
+          name: Check package
+          command: R CMD check --no-manual *tar.gz
+      - store_artifacts:
+          name: "Store Artifacts: 00check.log"
+          path: chiimp.Rcheck/00check.log
+      - store_artifacts:
+          name: "Store Artifacts: 00install.out"
+          path: chiimp.Rcheck/00install.out
+      - run:
+          name: "Run demo script"
+          command: bash exec/demo.sh $PWD/demo-files
+      - store_artifacts:
+          name: "Store Artifacts: demo: report"
+          path: demo-files/str-results/report.html
+      - store_artifacts:
+          name: "Store Artifacts: demo: summary"
+          path: demo-files/str-results/summary.csv
+      - run:
+          name: "Run demo script - empty case"
+          command: bash exec/demo_empty.sh $PWD/demo-empty-files
+      - store_artifacts:
+          name: "Store Artifacts: empty demo: report"
+          path: demo-empty-files/str-results/report.html
+      - store_artifacts:
+          name: "Store Artifacts: empty demo: summary"
+          path: demo-empty-files/str-results/summary.csv
+      - run:
+          name: "Run install test script"
+          command: bash tools/circleci_install_test.sh
+  build-r-3:
+    docker:
+      - image: rocker/verse:3.6.3
     steps:
       - checkout
       - restore_cache:
