--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,3 +107,10 @@ jobs:
       - run:
           name: "Run install test script"
           command: bash tools/circleci_install_test.sh
+
+workflows:
+  version: 2
+  build_all:
+    jobs:
+      - build-r-4
+      - build-r-3
