--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(load_seqs)
 export(main)
 export(make_dist_mat)
 export(make_dist_mat_known)
+export(make_read_primer_table)
 export(match_known_genotypes)
 export(plot_alignment)
 export(plot_cts_per_locus)
