--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(plot_heatmap_stutter)
 export(prepare_dataset)
 export(report_genotypes)
 export(report_idents)
+export(revcmp)
 export(sample_analysis_funcs)
 export(sample_summary_funcs)
 export(save_alignment_images)
