--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           command: Rscript exec/find_pandoc.R
       - run:
           name: "Run demo script"
-          command: bash exec/demo.sh $PWD/demo-files
+          command: bash exec/demo.sh $PWD/demo-files strict
       - store_artifacts:
           name: "Store Artifacts: demo: report"
           path: demo-files/str-results/report.html
@@ -62,7 +62,7 @@ jobs:
           path: demo-files/str-results/summary.csv
       - run:
           name: "Run demo script - empty case"
-          command: bash exec/demo_empty.sh $PWD/demo-empty-files
+          command: bash exec/demo_empty.sh $PWD/demo-empty-files strict
       - store_artifacts:
           name: "Store Artifacts: empty demo: report"
           path: demo-empty-files/str-results/report.html
