--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,12 @@ jobs:
           keys:
             - cache-{{ .Environment.CIRCLE_JOB }}-{{ checksum "DESCRIPTION" }}
       - run:
+          # The only reason we need this is that evidently Microsoft's mirror
+          # isn't providing these old packages anymore (which is probably a
+          # strong hint to give up and drop support here too).
+          name: Pull from real CRAN for R 3
+          command: R --version | grep -q "R version 3" && echo 'local({r<-getOption("repos"); r["CRANCLOUD"]<-"https://cloud.r-project.org";options(repos=r)})}' > ~/.RProfile
+      - run:
           name: Install package dependencies
           command: R -e "devtools::install_deps(dep = TRUE)"
       - save_cache:
